# today

./: .env  .gitignore  README.md  docker-compose.yml
backend/: .env.template  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
backend/migrations/2020-04-14-133117_create_db/: down.sql  up.sql
backend/migrations/2020-04-14-135837_add_initial_data/: down.sql  up.sql
backend/src/: app.rs  main.rs  schema.rs
backend/src/db/: Cargo.toml  connection.rs  mod.rs  models.rs  repository.rs
backend/src/domain/: Cargo.toml
backend/src/errors/: base.rs  mod.rs  task.rs  user.rs
backend/src/models/: errors.rs  mod.rs  project.rs  repository.rs  tasks.rs  user.rs
cljs-frontend/src/tailwind/example/: app.cljs  test.clj
frontend/: .eslintrc.js  .prettierrc  Dockerfile  nginx.conf  package.json  postcss.config.js  rollup.config.js  tailwind.config.js
frontend/public/: bundle.css  bundle.css.map  bundle.js  bundle.js.map  global.css  index.html
frontend/src/: App.svelte  Badge.svelte  Header.svelte  Hello.svelte  Item.svelte  Login.svelte  SignIn2.svelte  SignUp.svelte  SortableList.svelte  Switch.svelte  constants.js  routes.js
frontend/src/components/: Badge.svelte  Header.svelte  Hello.svelte  Item.svelte  Switch.svelte
frontend/src/pages/: Home.svelte  SignIn.svelte  SignIn2.svelte  SignUp.svelte
jhipster/: .yo-rc.json  README.md  package-lock.json  package.json  pom.xml
jhipster-backend/: .yo-rc.json  README.md  build.gradle  gradle.properties  package.json  settings.gradle  sonar-project.properties
jhipster-backend/gradle/: profile_prod.gradle  war.gradle
jhipster-backend/src/main/docker/: app.yml  mongodb-cluster.yml  mongodb.yml  monitoring.yml  sonar.yml
jhipster-backend/src/main/resources/: logback-spring.xml
jhipster-backend/src/main/webapp/: index.html  manifest.webapp
jhipster-backend/src/test/resources/: logback.xml
jhipster/src/main/jib/: entrypoint.sh
jhipster/src/main/webapp/: index.html
jhipster/src/test/resources/: logback.xml
nestjs-backend/: package.json
nginx/: Dockerfile  server-conf
node-backend/: .eslintrc.js  Dockerfile  package.json  webpack.config.js
(+131 files in other folders)
