[package]
name = "backend"
version = "0.1.0"
authors = ["Vladimir Ćirković <wladimir.cirkovic@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13"
tokio = { version = "0.2", features = ["full"] }
futures-util = { version = "0.3", default-features = false }
pretty_env_logger = "0.4"
