[package]
name = "rustappoint"
version = "0.1.0"
authors = ["Vladimir Ćirković <wladimir.cirkovic@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13"
tokio = { version = "0.2.11", features = ["full"] }
futures-util = { version = "0.3", default-features = false }
env_logger = "0.7.1"
diesel = { version = "1.4.4", features = ["chrono", "postgres", "r2d2", "uuidv07", "serde_json", "extras"] }
r2d2 = "0.8.8"
dotenv = "0.15.0"
jsonwebtoken = "7.0.1"
serde = "1.0.91"
serde_derive = "1.0.104"
anyhow = "1.0.28"
