[package]
name = "db"
version = "0.1.0"
authors = ["Vladimir Ćirković <wladimir.cirkovic@gmail.com>"]
edition = "2018"

[lib]
name = "db"
path = "src/lib.rs"

[dependencies]
diesel = { version = "1.4.4", features = ["postgres", "extras", "uuidv07"] }
r2d2 = "0.8"
serde = { version= "1", features = ["derive"] }
chrono = { version = "0.4.6", features = ["serde"] }
uuid = { version = "0.7.4", features = ["serde", "v4"] }
anyhow = "1.0.26"
domain = { package = "domain", path = "../domain" }
