[package]
name = "domain"
version = "0.1.0"
authors = ["Vladimir Ćirković <vladimir.cirkovic@rms.com>"]
edition = "2018"

[lib]
name = "domain"
path = "src/lib.rs"

[dependencies]
serde = { version= "1", features = ["derive"] }
chrono = { version = "0.4.6", features = ["serde"] }
log = "0.4.0"
uuid = { version = "0.7.4", features = ["serde", "v4"] }
itertools = "0.8.2"
thiserror = "1.0.9"
bcrypt = "0.6.1"
anyhow = "1.0.26"
